Got the first pieces of this thing to work

--- a/parent/src/index.html
+++ b/parent/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- TODO if this works, need to remember it for angular router -->
+    <base href="/">
     <meta charset="UTF-8">
     <title>Vanilla Parent</title>
+    <script src="http://localhost:3001/runtime.js"></script>
+    <script src="http://localhost:3001/polyfills.js"></script>
+    <script src="http://localhost:3001/vendor.js"></script>
+    <script src="http://localhost:3001/main.js"></script>
 </head>
 <body>
     <div class="row">
-
+        <app-root-mfe></app-root-mfe>
     </div>
     <div class="row">
 
