--- a/parent/src/index.html
+++ b/parent/src/index.html
@@ -5,10 +5,10 @@
     <base href="/">
     <meta charset="UTF-8">
     <title>Vanilla Parent</title>
-    <script src="http://localhost:3001/runtime.js"></script>
-    <script src="http://localhost:3001/polyfills.js"></script>
-    <script src="http://localhost:3001/vendor.js"></script>
-    <script src="http://localhost:3001/main.js"></script>
+<!--    <script src="http://localhost:3001/runtime.js"></script>-->
+<!--    <script src="http://localhost:3001/polyfills.js"></script>-->
+<!--    <script src="http://localhost:3001/vendor.js"></script>-->
+<!--    <script src="http://localhost:3001/main.js"></script>-->
 </head>
 <body>
     <div class="row">
