--- a/parent/src/index.html
+++ b/parent/src/index.html
@@ -5,14 +5,11 @@
     <base href="/">
     <meta charset="UTF-8">
     <title>Vanilla Parent</title>
-<!--    <script src="http://localhost:3001/runtime.js"></script>-->
-<!--    <script src="http://localhost:3001/polyfills.js"></script>-->
-<!--    <script src="http://localhost:3001/vendor.js"></script>-->
-<!--    <script src="http://localhost:3001/main.js"></script>-->
 </head>
 <body>
     <div class="row">
-        <app-root-mfe></app-root-mfe>
+        <mfe-one></mfe-one>
+        <mfe-two></mfe-two>
     </div>
     <div class="row">
 
