--- a/one/src/index.html
+++ b/one/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <mfe-one></mfe-one>
+  <app-root></app-root>
 </body>
 </html>
